--- a/src/scss/framework/base/_base.scss
+++ b/src/scss/framework/base/_base.scss
@@ -7,6 +7,10 @@
 // in the application folder.
 ////////////////////////////////////////////////////////////////////////////////
 
+* {
+  outline: $global-outline;
+}
+
 html,
 body {
   font-size: $global-font-size;
