--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -7,7 +7,7 @@ body, html {
     padding: 0;
 }
 
-body, 
+body,
 input,
 h1,
 h2,
@@ -15,7 +15,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Raleway", Helvetica, Arial, "Lucida Grande", sans-serif; 
+    font-family: "Raleway", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-weight: 300;
     font-size: 18px;
 }
@@ -38,15 +38,15 @@ img {
     height:auto;
 }
 
-.btn {background:#135571;color:#fff;
+.btn {background:#006147;color:#fff;
 
 		-webkit-transition: all 250ms;
         -moz-transition: all 250ms;
         -o-transition: all  250ms;
         transition: all  250ms;
-		
+
 		}
-		
+
 .btn:hover {background:#333; }
 
 .btn-download { border-radius:0 4px 0 0; font-weight:bold; width: 25px;  overflow: hidden;}
@@ -56,8 +56,8 @@ img {
   margin-top: 18px;
   margin-right: 15px
   }
- 
-.btn-download:hover { width:165px;} 
+
+.btn-download:hover { width:165px;}
 
 iframe {
     border: 0 !important;
@@ -149,7 +149,7 @@ a {
     -o-transition: all ease 150ms;
     transition: all ease 150ms;
     text-decoration: none;
-    color: #26abe2;
+    color: #00b282;
 }
 
 a:hover {
@@ -163,9 +163,9 @@ a:active {
 /* Header Styles */
 
 header {
-    padding: 2em 0 2em 0; 
-    
-    background: #26abe2; 
+    padding: 2em 0 2em 0;
+
+    background: #00b282;
     color: #fff;
 }
 
@@ -235,13 +235,13 @@ nav h1 a img {   margin-right: 10px;
   float: left;
   margin-top: 9px;
   }
-  
+
  nav h1 a  span {  float: left;
   margin-top: -5px;}
 
 nav a:active {
     color: #fff;
-    cursor: default;  
+    cursor: default;
 }
 
 
@@ -308,18 +308,18 @@ nav #menu-toggle {
 /* Content Styles */
 section { padding: 1em 0 3em; text-align: center; }
 section.vibrant { background: #222; color: #fff; }
-section.vibrant h4{  
+section.vibrant h4{
   line-height: 2;
   font-weight: normal;
   width: 90%;
   margin: 0 auto;
   }
 
-nav:before, 
-nav:after, 
-header:before, 
-header:after, 
-section:before, 
+nav:before,
+nav:after,
+header:before,
+header:after,
+section:before,
 section:after {
     content: " ";
     display: table;
@@ -432,13 +432,13 @@ input:focus {
     }
 
     .docs-nav a:hover {
-        background: #26ABE2;
+        background: #00b282;
 		color:#fff;
     }
 
-    .docs-nav a:active, 
+    .docs-nav a:active,
     .docs-nav .active {
-        background: #26ABE2;
+        background: #00b282;
 		color:#fff;
         border-right: 2px solid #ccc;
     }
@@ -454,7 +454,7 @@ input:focus {
 
 
     header {
-        padding: 1em 0 1em 0; 
+        padding: 1em 0 1em 0;
     }
 
     .container {
