--- a/src/scss/framework/global/_variables.scss
+++ b/src/scss/framework/global/_variables.scss
@@ -8,10 +8,10 @@
 // 1. Global
 // -----------------------------------------------------------------------------
 
-$global-width:             286px                                       !default; // Mobile
-$global-width-small:       604px                                       !default; // Tablet & up
-$global-width-medium:      922px                                       !default; // Desktop & up
-$global-width-large:       1240px                                      !default; // Large screens & up
+$global-width:             600px                                       !default; // Mobile
+$global-width-small:       768px                                       !default; // Tablet & up
+$global-width-medium:      1200px                                      !default; // Desktop & up
+$global-width-large:       1400px                                      !default; // Large screens & up
 
 $global-font-size:         16px                                        !default; // Mobile
 $global-font-size-small:   $global-font-size                           !default; // Tablet & up
@@ -20,14 +20,15 @@ $global-font-size-large:   $global-font-size                           !default;
 
 $global-lineheight:        1.3                                         !default;
 
-$primary-color:            #e52d87                                     !default;
+$primary-color:            #00b282                                     !default;
 $secondary-color:          #0093bb                                     !default;
 
 $success-color:            #009900                                     !default;
 $warning-color:            #ffae00                                     !default;
 $alert-color:              #ce3e3e                                     !default;
+$info-color:               #0058b2                                     !default;
 
-$white:                    #fff                                        !default;
+$white:                    #f9f9f9                                     !default;
 $black:                    #000                                        !default;
 
 $xlight-gray:              #f0f0f0                                     !default;
@@ -37,7 +38,7 @@ $medium-gray:              #b4b4b4                                     !default;
 $dark-gray:                #686868                                     !default;
 $xdark-gray:               #231e20                                     !default;
 
-$body-background:          $white                                      !default;
+$body-background:          #ffffff                                     !default;
 
 $body-font-color:          $xdark-gray                                 !default;
 $body-font-family:         "Trebuchet MS", Helvetica, sans-serif       !default;
@@ -61,8 +62,8 @@ $rem-base:                 $global-font-size                           !default;
 // 2. Breakpoints
 // -----------------------------------------------------------------------------
 
-$small:        320px                                                   !default; // Tablet & up
-$medium:       768px                                                   !default; // Desktop & up
+$small:        768px                                                   !default; // Tablet & up
+$medium:       900px                                                   !default; // Desktop & up
 $large:        1200px                                                  !default; // Large screens
 
 $small-down:   0px $small                                              !default; // Tablet & up
@@ -85,7 +86,7 @@ $header-margin-bottom:     rem-calc($global-margin)                    !default;
 $header-text-rendering:    optimizeLegibility                          !default;
 $header-small-font-color:  $dark-gray                                  !default;
 
-$header-1-size:            rem-calc($global-font-size + 15)            !default;
+$header-1-size:            rem-calc($global-font-size + 18)            !default;
 $header-2-size:            rem-calc($global-font-size + 12)            !default;
 $header-3-size:            rem-calc($global-font-size + 9)             !default;
 $header-4-size:            rem-calc($global-font-size + 6)             !default;
@@ -115,9 +116,9 @@ $code-border:      0                                                   !default;
 $code-padding:     rem-calc(2)                                         !default;
 
 $anchor-color:                 $primary-color                          !default;
-$anchor-color-hover:           scale-color($anchor-color, $lightness: -14%) !default;
+$anchor-color-hover:           scale-color($anchor-color, $lightness: -50%) !default;
 $anchor-text-decoration:       none                                    !default;
-$anchor-text-decoration-hover: none                                    !default;
+$anchor-text-decoration-hover: underline                               !default;
 
 $hr-width:  100%                                                       !default;
 $hr-border: rem-calc(1) solid $gray                                    !default;
@@ -133,20 +134,24 @@ $defnlist-margin-bottom:      1rem                                     !default;
 $defnlist-term-weight:        $global-weight-bold                      !default;
 $defnlist-term-margin-bottom: 0.3rem                                   !default;
 
-$blockquote-color:            inherit                                  !default;
-$blockquote-padding:          rem-calc(0 $global-padding)              !default;
-$blockquote-border:           rem-calc(1) solid $gray                  !default;
-$blockquote-font-family:      inherit                                  !default;
-$blockquote-font-size:        inherit                                  !default;
+$blockquote-color:            $dark-gray                               !default;
+$blockquote-padding:          rem-calc($global-padding)                !default;
+$blockquote-margin:           rem-calc($global-margin 0)               !default;
+$blockquote-border:           rem-calc(5) solid $gray                  !default;
+$blockquote-font-family:      $header-font-family                      !default;
+$blockquote-font-size:        $large-font-size                         !default;
 $blockquote-line-height:      inherit                                  !default;
+$blockquote-background:       $xlight-gray                             !default;
 
 $cite-font-size:              $small-font-size                         !default;
-$cite-color:                  $gray                                    !default;
+$cite-color:                  $dark-gray                               !default;
+
 $keystroke-font:              $font-family-monospace                   !default;
 $keystroke-color:             $black                                   !default;
 $keystroke-background:        $light-gray                              !default;
 $keystroke-padding:           rem-calc($global-padding)                !default;
 $keystroke-radius:            rem-calc($global-radius)                 !default;
+
 $abbr-underline:              rem-calc(1) dotted $black                !default;
 
 
@@ -239,7 +244,7 @@ $global-left:  if($global-text-direction == rtl, right, left)          !default;
 $global-right: if($global-text-direction == rtl, left, right)          !default;
 
 
-// 7. Pager
+// 7. Frontend
 // -----------------------------------------------------------------------------
 
 $pager-text-transform: uppercase                                       !default;
@@ -271,19 +276,28 @@ $pager-ellipsis-border-radius: rem-calc($global-radius)                !default;
 $pager-ellipsis-color:         $body-font-color                        !default;
 $pager-ellipsis-background:    transparent                             !default;
 
-
-// 8. Buttons
-// -----------------------------------------------------------------------------
-
 $button-radius:           0                                            !default;
 $button-background:       transparent                                  !default;
 $button-background-hover: $xdark-gray                                  !default;
 $button-font-size:        rem-calc($global-font-size)                  !default;
 $button-line-height:      1                                            !default;
-$button-padding:          rem-calc(8 10)                               !default;
+$button-padding:          rem-calc(20 40)                              !default;
 $button-color:            $xdark-gray                                  !default;
 $button-color-hover:      $white                                       !default;
 $button-border:           rem-calc(1) solid $xdark-gray                !default;
 $button-border-hover:     rem-calc(1) solid $xdark-gray                !default;
 $button-font-family:      $body-font-family                            !default;
 $button-text-transform:   uppercase                                    !default;
+
+$header-border-bottom:   rem-calc(1) solid $gray                       !default;
+$header-padding-top:     rem-calc($global-margin)                      !default;
+$header-padding-bottom:  rem-calc($global-margin - $global-padding)    !default;
+$header-margin-bottom:   rem-calc($global-margin)                      !default;
+$header-background:      rgba($body-background, .95)                   !default;
+
+$callout-background:     rgba($info-color, .3)                         !default;
+$callout-padding:        rem-calc($global-padding)                     !default;
+$callout-border:         rem-calc(1) solid rgba($info-color, .2)       !default;
+$callout-color:          $info-color                                   !default;
+$callout-radius:         rem-calc($global-radius)                      !default;
+
